--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     </header>
     
     <section class="menu-selection">
-        <a href="food.pdf" class="menu-btn" target="_blank">📜 قائمة المناقيش والبيتزا</a>
+        <a href="food.pdf" class="menu-btn" target="_blank">📜قائمة الصاج</a>
         <a href="juice.pdf" class="menu-btn" target="_blank">🍹 قائمة المشروبات</a>
+		<a href="food.pdf" class="menu-btn" target="_blank">📜قائمة المناقيش والبيتزا (قريباً)</a>
     </section>
 
     <section class="random-images">
