--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="menu-selection">
         <a href="food.pdf" class="menu-btn" target="_blank">📜قائمة الصاج</a>
         <a href="juice.pdf" class="menu-btn" target="_blank">🍹 قائمة المشروبات</a>
-		<a href="food.pdf" class="menu-btn" target="_blank">📜قائمة المناقيش والبيتزا (قريباً)</a>
+		<a href="" class="menu-btn" target="_blank">📜قائمة المناقيش والبيتزا (قريباً)</a>
     </section>
 
     <section class="random-images">
