--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1 class="bakery-title">Bella Bakery</h1>
         <p class="working-hours">ساعات العمل: من 7:00 صباحًا حتى 12:00 ظهرًا، ومن 6:30 مساءً حتى 12:00 منتصف الليل</p>
-	<p class="working-hours">ساعات العمل خلال شهر رمضان المبارك: من الساعة 12 منتصف الليل حتى 3:30 فجرا</p>
+	<p class="working-hours">🍞ساعات العمل خلال شهر رمضان المبارك: من الساعة 12 منتصف الليل حتى 3:30 فجرا🌙</p>
     </header>
     
     <section class="menu-selection">
